<resources>
    <string name="app_name">Final qualifying work</string>
    <string name="login_page_login">логин</string>
    <string name="login_page_password">пароль</string>
    <string name="login_page_button_login">ВОЙТИ</string>
    <string name="login_page_button_registration">ЗАРЕГИСТРИРОВАТЬСЯ</string>
    <string name="login_page_have_no_account">нет аккаунта?</string>
    <string name="registration_page_name">имя</string>
    <string name="registration_page_last_name">фамилия</string>
    <string name="registration_page_mail">почта</string>
    <string name="registration_page_create_password">придумайте пароль (от 8-ми символов)</string>
    <string name="registration_page_button_registration">ЗАРЕГИСТРИРОВАТЬСЯ</string>
    <string name="basket_order_button_order_text">Заказать</string>
    <string name="basket_order_button_order_text_2">Оформить заказ</string>
    <string name="basket_order_title_text">Оформление заказа</string>
    <string name="basket_order_human_count_text">Количество человек:</string>
    <string name="basket_order_table_count_input">Выбрать столик</string>
    <string name="basket_order_human_count_input">Выбрать кол-во человек</string>
    <string name="basket_order_human_count_menu_option_1">1</string>
    <string name="basket_order_human_count_menu_option_2">2</string>
    <string name="basket_order_human_count_menu_option_3">3</string>
    <string name="basket_order_human_count_menu_option_4">4</string>
    <string name="basket_order_human_count_menu_option_5">5</string>
    <string name="basket_order_human_count_menu_option_6">6</string>
    <string name="basket_order_table_text">Предпочитаемый столик:</string>
    <string name="basket_order_table_option_1">Около выхода</string>
    <string name="basket_order_table_option_2">Около окна</string>
    <string name="basket_order_table_option_3">В центре зала</string>
    <string name="basket_order_table_option_4">В конце зала</string>
    <string name="basket_order_clock">Выбрать время</string>
    <string name="basket_order_sum">7800</string>
    <string name="basket_minus_button_text">-</string>
    <string name="basket_plus_button_text">+</string>
    <string name="basket_dish_amount">Итого:</string>
    <string name="basket_item_count_text">1</string>
    <string name="profile_telephone">телефон</string>
    <string name="nav_menu_home">Меню</string>
    <string name="nav_menu_basket">Корзина</string>
    <string name="nav_menu_profile">Профиль</string>
    <string name="basket_order_name_sum">Итого:</string>

    <string name="notification_title">Ваш заказ скоро будет готов</string>
    <string name="notification_subtitle">Через 30 минут ваш заказ будет готов. Приходите, мы вас ждем</string>


</resources>