<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/basketOrderHumanCountMenuOption_1"
        android:title="@string/basket_order_human_count_menu_option_1" />
    <item android:id="@+id/basketOrderHumanCountMenuOption_2"
        android:title="@string/basket_order_human_count_menu_option_2" />
    <item android:id="@+id/basketOrderHumanCountMenuOption_3"
        android:title="@string/basket_order_human_count_menu_option_3" />
    <item android:id="@+id/basketOrderHumanCountMenuOption_4"
        android:title="@string/basket_order_human_count_menu_option_4" />
    <item android:id="@+id/basketOrderHumanCountMenuOption_5"
        android:title="@string/basket_order_human_count_menu_option_5" />
    <item android:id="@+id/basketOrderHumanCountMenuOption_6"
        android:title="@string/basket_order_human_count_menu_option_6" />
</menu>