<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_name"
        android:layout_width="267dp"
        android:layout_height="47dp"
        android:layout_marginBottom="507dp"

        android:hint="@string/registration_page_name"
        android:paddingStart="12dp"
        android:paddingBottom="8dp"
        android:textColor="@color/chocolate"
        android:textSize="13dp"
        android:backgroundTint="@color/chocolate"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_last_name"
        android:layout_width="267dp"
        android:layout_height="47dp"
        android:layout_marginTop="13dp"

        android:hint="@string/registration_page_last_name"
        android:paddingStart="12dp"
        android:paddingBottom="8dp"
        android:textColor="@color/chocolate"
        android:textSize="13dp"
        android:backgroundTint="@color/chocolate"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/registration_input_mail"
        android:layout_width="267dp"
        android:layout_height="47dp"
        android:layout_marginTop="13dp"

        android:hint="@string/registration_page_mail"
        android:paddingStart="12dp"
        android:paddingBottom="8dp"
        android:textColor="@color/chocolate"
        android:textSize="13dp"
        android:backgroundTint="@color/chocolate"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_last_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/registration_input_password"
        android:layout_width="267dp"
        android:layout_height="47dp"
        android:layout_marginTop="13dp"

        android:hint="@string/registration_page_create_password"
        android:paddingStart="12dp"
        android:paddingBottom="8dp"
        android:textColor="@color/chocolate"
        android:textSize="13dp"
        android:backgroundTint="@color/chocolate"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_input_mail" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registration_button_registration"
        android:layout_width="286dp"
        android:layout_height="36dp"
        android:layout_marginBottom="242dp"

        android:background="@drawable/button_selector"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/registration_page_button_registration"
        android:textColor="@color/chocolate"
        android:textSize="13dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>