<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_background">

    <ImageView
        android:id="@+id/profileAvatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/ic_profile" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/profile_input_name"
        android:layout_width="280dp"
        android:layout_height="47dp"
        android:layout_marginBottom="337dp"

        android:backgroundTint="@color/chocolate"
        android:hint="@string/registration_page_name"
        android:paddingStart="12dp"
        android:paddingBottom="8dp"
        android:textColor="@color/chocolate"
        android:textSize="13dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/profile_input_last_name"
        android:layout_width="280dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"

        android:backgroundTint="@color/chocolate"
        android:hint="@string/registration_page_last_name"
        android:paddingStart="12dp"
        android:paddingBottom="8dp"
        android:textColor="@color/chocolate"
        android:textSize="13dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_input_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/profile_input_mail"
        android:layout_width="280dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"

        android:backgroundTint="@color/chocolate"
        android:hint="@string/registration_page_mail"
        android:paddingStart="12dp"
        android:paddingBottom="8dp"
        android:textColor="@color/chocolate"
        android:textSize="13dp"

        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_input_last_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/profile_input_phone"
        android:layout_width="280dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"

        android:backgroundTint="@color/chocolate"
        android:hint="@string/profile_telephone"
        android:paddingStart="12dp"
        android:paddingBottom="8dp"
        android:textColor="@color/chocolate"
        android:textSize="13dp"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_input_mail" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/profile_edit_profile"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/profile_edit_selector"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>