<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/smoke_gray">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBasketItems"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="18dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/basketOrderButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:spanCount="1"
        tools:listitem="@layout/item_basket" />

    <TextView
        android:id="@+id/basketOrderAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:fontFamily="sans-serif-black"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="@+id/basketOrderButton"
        app:layout_constraintStart_toEndOf="@+id/basketOrderNameAmount"
        app:layout_constraintTop_toTopOf="@+id/basketOrderButton"
        tools:text="@string/basket_order_sum" />

    <TextView
        android:id="@+id/basketOrderNameAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:fontFamily="sans-serif-black"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="@+id/basketOrderAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/basketOrderAmount"
        android:text="@string/basket_dish_amount" />

    <Button
        android:id="@+id/basketOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/button_selector"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/basket_order_button_order_text_2"
        android:textColor="@color/whitegold"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>