<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginTop="12dp"
    android:layout_marginEnd="20dp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/basketItemImage"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src='@drawable/image_item_cold_dish_cheese_plate' />

    <TextView
        android:id="@+id/basketItemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="sans-serif-black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/basketItemImage"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Сырная тарелка" />

    <TextView
        android:id="@+id/basketItemAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="sans-serif-medium"
        android:textSize="15sp"
        android:text="@string/basket_dish_amount"
        app:layout_constraintStart_toEndOf="@+id/basketItemImage"
        app:layout_constraintTop_toBottomOf="@+id/basketItemTitle"
        />

    <TextView
        android:id="@+id/basketItemPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textSize="15sp"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/basketItemAmount"
        app:layout_constraintTop_toBottomOf="@+id/basketItemTitle"
        tools:text="330 руб." />

    <TextView
        android:id="@+id/basketItemCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="sans-serif-medium"
        android:textSize="18sp"
        android:text="@string/basket_dish_count_text"
        app:layout_constraintBottom_toBottomOf="@+id/basketItemMinusButton"
        app:layout_constraintStart_toEndOf="@+id/basketItemMinusButton"
        app:layout_constraintTop_toTopOf="@+id/basketItemMinusButton"
        tools:text="100" />

    <Button
        android:id="@+id/basketItemMinusButton"
        android:layout_width="40dp"
        android:layout_height="39dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_selector"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/basket_minus_button_text"
        android:textColor="@color/chocolate"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/basketItemImage" />

    <Button
        android:id="@+id/basketItemPlusButton"
        android:layout_width="40dp"
        android:layout_height="39dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_selector"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/basket_plus_button_text"
        android:textColor="@color/chocolate"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/basketItemCount" />

    <ImageButton
        android:id="@+id/basketItemDeleteButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_basket_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>